// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sort parameters tests > Query with incorrect sort direction 1`] = `
{
  "query": "query ($q: String!, $siteKeys: [String], $language: String, $workspace: Workspace, $functionScoreId: String, $filters: Inputfilter, $size: Int, $page: Int, $sortBy: [InputsortV2]) {
  search(
    q: $q
    siteKeys: $siteKeys
    language: $language
    workspace: $workspace
    functionScoreId: $functionScoreId
    filters: $filters
  ) {
    results(size: $size, page: $page, sortBy: $sortBy) {
      totalHits
      took
      hits {
        id
        link
        displayableName
        excerpt
        score
        created: property(name: "jcr:created")
      }
    }
  }
}",
  "variables": {
    "filters": {
      "nodeType": {
        "type": "fake",
      },
    },
    "functionScoreId": "fake",
    "language": "fake",
    "page": 0,
    "q": "",
    "siteKeys": [
      "fake",
    ],
    "size": 5,
    "sortBy": undefined,
    "workspace": "fake",
  },
}
`;

exports[`Sort parameters tests > Query with incorrect sort field 1`] = `
{
  "query": "query ($q: String!, $siteKeys: [String], $language: String, $workspace: Workspace, $functionScoreId: String, $filters: Inputfilter, $size: Int, $page: Int, $sortBy: [InputsortV2]) {
  search(
    q: $q
    siteKeys: $siteKeys
    language: $language
    workspace: $workspace
    functionScoreId: $functionScoreId
    filters: $filters
  ) {
    results(size: $size, page: $page, sortBy: $sortBy) {
      totalHits
      took
      hits {
        id
        link
        displayableName
        excerpt
        score
        created: property(name: "jcr:created")
      }
    }
  }
}",
  "variables": {
    "filters": {
      "nodeType": {
        "type": "fake",
      },
    },
    "functionScoreId": "fake",
    "language": "fake",
    "page": 0,
    "q": "",
    "siteKeys": [
      "fake",
    ],
    "size": 5,
    "sortBy": undefined,
    "workspace": "fake",
  },
}
`;

exports[`Sort parameters tests > Query with sort 1`] = `
{
  "query": "query ($q: String!, $siteKeys: [String], $language: String, $workspace: Workspace, $functionScoreId: String, $filters: Inputfilter, $size: Int, $page: Int, $sortBy: [InputsortV2]) {
  search(
    q: $q
    siteKeys: $siteKeys
    language: $language
    workspace: $workspace
    functionScoreId: $functionScoreId
    filters: $filters
  ) {
    results(size: $size, page: $page, sortBy: $sortBy) {
      totalHits
      took
      hits {
        id
        link
        displayableName
        excerpt
        score
        created: property(name: "jcr:created")
      }
    }
  }
}",
  "variables": {
    "filters": {
      "nodeType": {
        "type": "fake",
      },
    },
    "functionScoreId": "fake",
    "language": "fake",
    "page": 0,
    "q": "",
    "siteKeys": [
      "fake",
    ],
    "size": 5,
    "sortBy": [
      {
        "dir": "ASC",
        "field": "jcr:title",
      },
    ],
    "workspace": "fake",
  },
}
`;

exports[`Sort parameters tests > Query without sort 1`] = `
{
  "query": "query ($q: String!, $siteKeys: [String], $language: String, $workspace: Workspace, $functionScoreId: String, $filters: Inputfilter, $size: Int, $page: Int, $sortBy: [InputsortV2]) {
  search(
    q: $q
    siteKeys: $siteKeys
    language: $language
    workspace: $workspace
    functionScoreId: $functionScoreId
    filters: $filters
  ) {
    results(size: $size, page: $page, sortBy: $sortBy) {
      totalHits
      took
      hits {
        id
        link
        displayableName
        excerpt
        score
        created: property(name: "jcr:created")
      }
    }
  }
}",
  "variables": {
    "filters": {
      "nodeType": {
        "type": "fake",
      },
    },
    "functionScoreId": "fake",
    "language": "fake",
    "page": 0,
    "q": "",
    "siteKeys": [
      "fake",
    ],
    "size": 5,
    "sortBy": undefined,
    "workspace": "fake",
  },
}
`;
